[gd_scene load_steps=17 format=3 uid="uid://8yocrc6iicxu"]

[ext_resource type="Script" path="res://030_deps_scenes/player/player.gd" id="1_d13tk"]
[ext_resource type="Texture2D" uid="uid://brmnh8lbc6i61" path="res://030_deps_scenes/player/art/Player_metroid.png" id="1_jnwq3"]
[ext_resource type="PackedScene" uid="uid://i373atnbj3bo" path="res://030_deps_scenes/bullet/bullet_1.tscn" id="2_e253i"]
[ext_resource type="Shader" path="res://030_deps_scenes/player/art/hurt.gdshader" id="2_uasbo"]
[ext_resource type="PackedScene" uid="uid://gui5wgmawcub" path="res://020_standalone_scenes/scent_trail/scent_trail.tscn" id="3_yqpmv"]
[ext_resource type="Texture2D" uid="uid://b3fq3kvklme8e" path="res://030_deps_scenes/player/art/gun_1.png" id="6_bd5hm"]
[ext_resource type="PackedScene" uid="uid://glnym367rjgv" path="res://020_standalone_scenes/mouse_icon/mouse_icon.tscn" id="7_046qd"]
[ext_resource type="PackedScene" uid="uid://bkea2vqvy2ffg" path="res://020_standalone_scenes/camera_shaked/shaked_camera.tscn" id="9_8qj2o"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sedtn"]
radius = 7.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6y6y3"]
shader = ExtResource("2_uasbo")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="Animation" id="Animation_yff25"]
resource_name = "Dead"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("player_collider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hitbox/hitbox_collider:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"reset_states"
}]
}

[sub_resource type="Animation" id="Animation_8t1of"]
resource_name = "Idle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("player_collider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hitbox/hitbox_collider:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="Animation" id="Animation_8n68b"]
resource_name = "Move"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9, 10, 11, 12, 13, 14]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("player_collider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hitbox/hitbox_collider:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="Animation" id="Animation_7aiyn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("player_collider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hitbox/hitbox_collider:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_si2yl"]
_data = {
"Dead": SubResource("Animation_yff25"),
"Idle": SubResource("Animation_8t1of"),
"Move": SubResource("Animation_8n68b"),
"RESET": SubResource("Animation_7aiyn")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_x5ctw"]

[node name="Player" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
collision_mask = 31
script = ExtResource("1_d13tk")
bullet_scene = ExtResource("2_e253i")
trail_scene = ExtResource("3_yqpmv")
speed = 100

[node name="player_collider" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_sedtn")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
y_sort_enabled = true
material = SubResource("ShaderMaterial_6y6y3")
position = Vector2(0, -13)
texture = ExtResource("1_jnwq3")
hframes = 8
vframes = 7
frame = 2

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_si2yl")
}
autoplay = "Idle"

[node name="hitbox" type="Area2D" parent="."]
position = Vector2(0, -13)
collision_mask = 32

[node name="hitbox_collider" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, 13)
shape = SubResource("CircleShape2D_x5ctw")
disabled = true
debug_color = Color(0.87265, 0.233324, 0.647269, 0.42)

[node name="gun_handler" type="Node2D" parent="."]

[node name="gun_sprite" type="Sprite2D" parent="gun_handler"]
position = Vector2(6, 0)
texture = ExtResource("6_bd5hm")

[node name="bullet_point" type="Marker2D" parent="gun_handler"]
position = Vector2(13, 0)

[node name="MouseIcon" parent="." instance=ExtResource("7_046qd")]

[node name="trail_timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="ShakedCamera" parent="." instance=ExtResource("9_8qj2o")]

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="trail_timer" to="." method="_on_trail_timer_timeout"]
